airport/config/once/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airport
  labels:
    istio-injection: enabled
    knative-eventing-injection: enabled
